--- a/CoordinatorPattern/Views/UserView/Login.xib
+++ b/CoordinatorPattern/Views/UserView/Login.xib
@@ -1,18 +1,87 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+        <view clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" layoutMarginsFollowReadableWidth="YES" id="iN0-l3-epB" customClass="Login" customModule="CoordinatorPattern" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+            <subviews>
+                <button opaque="NO" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" layoutMarginsFollowReadableWidth="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ijX-Yn-nO7">
+                    <rect key="frame" x="20" y="782" width="374" height="60"/>
+                    <color key="backgroundColor" red="0.95124221509999995" green="1" blue="0.17260561269999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="60" id="qhq-GX-faO"/>
+                    </constraints>
+                    <viewLayoutGuide key="safeArea" id="HiN-yw-7mY"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                    <state key="normal" title="Create Profile"/>
+                    <connections>
+                        <action selector="buttonCreateProfile:" destination="iN0-l3-epB" eventType="touchUpInside" id="NkQ-ri-mrh"/>
+                    </connections>
+                </button>
+                <button opaque="NO" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" layoutMarginsFollowReadableWidth="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0oI-Pa-syl">
+                    <rect key="frame" x="20" y="702" width="374" height="60"/>
+                    <color key="backgroundColor" red="1" green="0.13887253350000001" blue="0.20458655419999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="60" id="jP6-6n-FoM"/>
+                    </constraints>
+                    <viewLayoutGuide key="safeArea" id="p4b-dl-tRJ"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                    <state key="normal" title="Login"/>
+                    <connections>
+                        <action selector="buttonLogin:" destination="iN0-l3-epB" eventType="touchUpInside" id="KSW-Dz-yfc"/>
+                    </connections>
+                </button>
+                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="u2O-JE-pzq">
+                    <rect key="frame" x="20" y="64" width="374" height="60"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="60" id="Fhc-0I-1vd"/>
+                    </constraints>
+                    <nil key="textColor"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                    <textInputTraits key="textInputTraits"/>
+                </textField>
+                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="a8l-IY-6Qy">
+                    <rect key="frame" x="20" y="144" width="374" height="60"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="60" id="1zb-rv-dlJ"/>
+                    </constraints>
+                    <nil key="textColor"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                    <textInputTraits key="textInputTraits"/>
+                </textField>
+            </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <constraints>
+                <constraint firstAttribute="trailing" secondItem="0oI-Pa-syl" secondAttribute="trailing" constant="20" id="Iuy-kU-ohc"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="ijX-Yn-nO7" secondAttribute="trailing" constant="20" id="MiS-G6-LTC"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="a8l-IY-6Qy" secondAttribute="trailing" constant="20" id="Pfe-1A-54H"/>
+                <constraint firstItem="ijX-Yn-nO7" firstAttribute="top" secondItem="0oI-Pa-syl" secondAttribute="bottom" constant="20" id="Sja-OG-anj"/>
+                <constraint firstItem="a8l-IY-6Qy" firstAttribute="top" secondItem="u2O-JE-pzq" secondAttribute="bottom" constant="20" id="Vif-OO-wmn"/>
+                <constraint firstItem="u2O-JE-pzq" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="20" id="WlM-Bx-dYB"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="u2O-JE-pzq" secondAttribute="trailing" constant="20" id="a6W-lw-iFh"/>
+                <constraint firstItem="ijX-Yn-nO7" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="20" id="bdf-VU-gnJ"/>
+                <constraint firstItem="a8l-IY-6Qy" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="20" id="cTJ-DO-6GD"/>
+                <constraint firstItem="0oI-Pa-syl" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="20" id="cwQ-Yt-j4E"/>
+                <constraint firstItem="u2O-JE-pzq" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="20" id="ene-Yd-ET0"/>
+                <constraint firstAttribute="bottom" secondItem="ijX-Yn-nO7" secondAttribute="bottom" constant="54" id="s8L-8Z-gCB"/>
+            </constraints>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
+            <connections>
+                <outlet property="textLabelLogin" destination="u2O-JE-pzq" id="5ib-ke-Jx5"/>
+                <outlet property="textLabelPassword" destination="a8l-IY-6Qy" id="hYi-jy-Yqg"/>
+            </connections>
+            <point key="canvasLocation" x="47.826086956521742" y="35.491071428571423"/>
         </view>
     </objects>
 </document>
